Remove update checking functionality and bump version to 1.0.0.